Settings and setting *mothership*
Added classes for the different types of settings:
- ToggleSetting (boolean)
- RadioButtonSetting (element from a list of choices)
- Slider (value in a range)

Also, added SettingMothership, that implements the factory design patter for these classes and loads the value of all its settings in the browser's storage

--- a/tabPage.html
+++ b/tabPage.html
@@ -123,6 +123,7 @@
   </div>
   </div>
   <script src="scripts/utils/utils.js"></script>
+  <script src="scripts/src/settings.js"></script>
   <script src="scripts/src/listeners.js"></script>
   <script src="scripts/src/renderHTML.js"></script>
   <script src="scripts/src/tabGroup.js"></script>
